fix java function ex2